@@ -96,10 +96,6 @@
             <artifactId>spring-boot-starter-kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security-oauth2-client</artifactId>
         </dependency>
@@ -225,6 +221,9 @@
                         <image>gecko2/${project.artifactId}:latest</image> </to>
                     <container>
                         <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+                        <jvmFlags>
+                            <jvmFlag>--sun-misc-unsafe-memory-access=allow</jvmFlag> <!-- Removes annoying warning in logs, eventually needs to remove this flag when openTelemetry updates-->
+                        </jvmFlags>
                     </container>
                 </configuration>
             </plugin>
